k8s/local/user-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: user-db
  namespace: fantasy-maps
spec:
  serviceName: user-db
  replicas: 1
  selector:
    matchLabels:
      app: user-db
  template:
    metadata:
      labels:
        app: user-db
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: user-db-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: user-db-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 2Gi

---
apiVersion: v1
kind: Service
metadata:
  name: user-db
  namespace: fantasy-maps
spec:
  selector:
    app: user-db
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
