k8s/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fantasy-maps-ingress
  namespace: fantasy-maps
spec:
  ingressClassName: traefik
  rules:
    - host: localhost
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
